--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.2.6"
+    "mongoose": "^5.2.6",
+    "mpath": "^0.5.1"
   },
   "devDependencies": {},
   "repository": {
