--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Robyn Veitch",
@@ -19,7 +20,10 @@
     "mongoose": "^5.10.6",
     "mpath": "^0.5.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemo": "^1.0.0",
+    "nodemon": "^2.0.7"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Oddert/fcc-backend-message-board.git"
