--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "method-override": "^3.0.0",
-    "mongoose": "^5.10.6",
-    "mpath": "^0.5.2"
+    "mongoose": "^5.11.14"
   },
   "devDependencies": {
     "nodemo": "^1.0.0",
